--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
         "symfony/orm-pack": "^1.0",
+        "symfony/serializer-pack": "^1.0",
         "symfony/yaml": "4.2.*"
     },
     "config": {
