--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,8 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.11"
+        "symfony/maker-bundle": "^1.11",
+        "squizzlabs/php_codesniffer": "3.3.0",
+        "phpmd/phpmd": "@stable"
     }
 }
