--- a/composer.json
+++ b/composer.json
@@ -63,6 +63,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
+        "fzaninotto/faker": "^1.8",
         "phpmd/phpmd": "@stable",
         "squizlabs/php_codesniffer": "3.3.0",
         "symfony/maker-bundle": "^1.11"
