prepared jwt token library and keys

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ console
 ###< squizlabs/php_codesniffer ###
 phpcs.xml.dist
 d3dc2a4a-e273-415a-b4fa-40daa62bad18.xml
+
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
