--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,7 +3,11 @@ security:
     encoders:
         App\Entity\User: bcrypt
     providers:
-        in_memory: { memory: ~ }
+#        in_memory: { memory: ~ }
+        database:
+            entity:
+                class: App\Entity\User
+                property: username
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
