--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -12,8 +12,18 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
+        api:
+            pattern: ^/api
+            stateless: true
             anonymous: true
+            json_login:
+                # Authentication will happen here (token generation)
+                check_path: /api/login_ceck
+                success_handle: lexik_jwt_authenticaiton.handler.authentication_success
+                failure_handle: lexik_jwt_authenticaiton.handler.authentication_failure
+            guard:
+                authenticators:
+                    - lexik_jwt_authenticaiton.jwt_token.authenticator
 
             # activate different ways to authenticate
 
@@ -26,5 +36,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
