--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -43,4 +43,4 @@ security:
     role_hierarchy:
         ROLE_WRITER: ROLE_COMMENTATOR
         ROLE_ADMIN: [ROLE_WRITER, ROLE_EDITOR]
-        ROLE_SUPERADMIN: ROLE_ADMIN
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
