Handling empty body request

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -17,3 +17,5 @@ api_platform:
             partial_parameter_name: 'partial'
 #            client_enabled: true
 #            enabled_parameter_name: pagination
+    exception_to_status:
+        App\Exception\EmptyBodyException: 400
