--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -19,3 +19,4 @@ api_platform:
 #            enabled_parameter_name: pagination
     exception_to_status:
         App\Exception\EmptyBodyException: 400
+        App\Exception\InvalidConfirmationTokenException: 404
