defined custom logging channel

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -34,3 +34,8 @@ services:
         arguments: ['@security.token_storage']
         tags:
             - { name: 'serializer.normalizer', priority: 64 }
+
+    App\Security\UserConfirmationService:
+        arguments:
+            $logger: '@monolog.logger.token_confirmation'
+
