--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,9 +1,12 @@
 easy_admin:
     entities:
         # List the entity class name you want to manage
-        - App\Entity\Post
-        - App\Entity\Comment
-        - App\Entity\User
-        - App\Entity\Image
-#        - App\Entity\Category
-#        - App\Entity\User
+        Post:
+            class: App\Entity\Post
+        Comment:
+            class: App\Entity\Comment
+        User:
+            class: App\Entity\User
+            controller: App\Controller\UserAdminController
+        Image:
+            class: App\Entity\Image
