installed behat and all extensions

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ d3dc2a4a-e273-415a-b4fa-40daa62bad18.xml
 
 phpunit.xml
 bin/*
+
+###> behat/symfony2-extension ###
+behat.yml
+###< behat/symfony2-extension ###
