--- a/config/services.yaml
+++ b/config/services.yaml
@@ -39,3 +39,8 @@ services:
         arguments:
             $logger: '@monolog.logger.token_confirmation'
 
+    App\EventListener\ExceptionListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception, priority: 1 }
+        arguments: ['@api_platform.action.exception', '@logger', false]
+
