fetching user profile on page refresh

--- a/public/react/package.json
+++ b/public/react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-platform-react-app-course",
+  "name": "api-platform-react-app",
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
