--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install apt
+          command: sudo apt-get install -y zlib1g-dev
+      - run:
           name: Install PHP MySQL
           command: sudo docker-php-ext-install pdo_mysql
       - run:
@@ -33,4 +36,6 @@ jobs:
       - run:
           name: Run migrations
           command: php bin/console doctrine:migrations:migrate --env=test --no-interaction
-
+      - run:
+          name: Run tests
+          command: ./bin/phpunit
