Installed nginx and mysql

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -4,7 +4,41 @@
   tasks:
     - ping: ~
 
-    - name: Install cowsay
+    - name: Update APT package manager repositories cache
       apt:
-        name: cowsay
+        update_cache: yes
       become: true
+
+    - name: Upgrade install packages
+      apt:
+        upgrade: safe
+      become: true
+
+    - name: Install Git
+      become: true
+      apt:
+        name: git
+        state: latest
+
+    - name: Install Nginx web server
+      become: true
+      apt:
+        name: nginx
+        state: latest
+
+    - name: Install Mysql DB server
+      become: true
+      apt:
+        name: mysql-server
+        state: latest
+
+    - name: Add PHP 8 PPA repository
+      become: true
+      apt_repository:
+        repo: 'ppa:ondrej/php'
+
+    - name: Install PHP CLI
+      become: true
+      apt:
+        name: php8.0-cli
+        state: latest
