--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,6 +1,10 @@
 ---
 - hosts: vb
 
+  vars:
+    symfony_root_dir: "/var/www/project"
+    php_version: 8.0
+
   tasks:
     - ping: ~
 
@@ -37,8 +41,40 @@
       apt_repository:
         repo: 'ppa:ondrej/php'
 
-    - name: Install PHP CLI
+    - name: Install PHP packages
       become: true
       apt:
-        name: php8.0-cli
+        name: ['php{{ php_version }}-common', 'php{{ php_version }}-mysql', 'php{{ php_version }}-xml',
+               'php{{ php_version }}-fpm', 'php{{ php_version }}-intl', 'php{{ php_version }}-curl',
+               'php{{ php_version }}-gd', 'php{{ php_version }}-imagick', 'php{{ php_version }}-cli',
+               'php{{ php_version }}-dev', 'php{{ php_version }}-imap', 'php{{ php_version }}-mbstring',
+               'php{{ php_version }}-opcache', 'php{{ php_version }}-soap', 'php{{ php_version }}-zip']
         state: latest
+    - name: Set date.timezone for CLI
+      become: true
+      lineinfile:
+        dest: "/etc/php/{{ php_version }}/cli/php.ini"
+        regexp: "date.timezone ="
+        line: "date.timezone = UTC"
+
+    - name: Set date.timezone for FPM
+      become: true
+      lineinfile:
+        dest: "/etc/php/{{ php_version }}/fpm/php.ini"
+        regexp: "date.timezone ="
+        line: "date.timezone = UTC"
+
+    - name: Create a project directory and set its permission
+      become: true
+      file:
+        path: "{{ symfony_root_dir }}"
+        state: directory
+        owner: "{{ ansible_user }}"
+        group: "{{ ansible_user }}"
+        recurse: yes
+
+    - name: Checkout git repository
+      git:
+        repo: https://github.com/william251082/pristine-app
+        dest: "/var/www/project"
+        force: yes
