--- a/ansible/hosts.ini
+++ b/ansible/hosts.ini
@@ -1,6 +1,15 @@
 [local]
-127.0.0.1 ansible_connection=local
+127.0.0.1 ansible_connection=local ansible_python_interpreter=python
 
 
 [vb]
-192.168.33.10 ansible_user=vagrant ansible_ssh_pass=vagrant
+192.168.33.10 ansible_user=vagrant ansible_ssh_pass=vagrant ansible_python_interpreter=python
+
+
+[aws]
+18.130.170.66 ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/Ansible_AWS_tmp.pem
+
+
+[webserver:children]
+vb
+aws
